--- a/Installer_Src/Setup DreamWorld/My Project/Resources.de.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.de.resx
@@ -3318,4 +3318,22 @@
   <data name="RemindMeLater" xml:space="preserve">
     <value>Erinnere mich später</value>
   </data>
+  <data name="Setup_search" xml:space="preserve">
+    <value>Suchdatenbank einrichten</value>
+  </data>
+  <data name="View_Folder" xml:space="preserve">
+    <value>Ordner anzeigen</value>
+  </data>
+  <data name="arrivals" xml:space="preserve">
+    <value>Ankünfte zu ausgeschalteten Sims werden umgeleitet zu</value>
+  </data>
+  <data name="DeleteSims" xml:space="preserve">
+    <value>*** Dadurch werden alle Regionen im Anwesen 'SimSurround' gelöscht!</value>
+  </data>
+  <data name="Min_time" xml:space="preserve">
+    <value>Die Mindestzeit beträgt 0 Sekunden. Der Standardwert ist 15 Sekunden.</value>
+  </data>
+  <data name="Regions_Deleted" xml:space="preserve">
+    <value>Regionen gelöscht</value>
+  </data>
 </root>
